<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pablomonteserin"
        android:textSize="30px"
        android:gravity="center"
        android:paddingBottom="50px"
        />
    <Button android:text="@string/menu1" android:id="@+id/button1" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
    <Button android:text="@string/menu2" android:id="@+id/button2" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
    <Button android:text="@string/menu3" android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    <Button android:text="@string/menu4" android:id="@+id/button4" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>

</LinearLayout>
