<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pablomonteserin" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu1" >
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu2" >
            </Button>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu3" >
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu4" >
            </Button>


</LinearLayout>